# sqlfluff-tstring

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  codecov.yaml  pyproject.toml
.claude/update-changelog/: SKILL.md
.github/workflows/: ci.yaml  claude-code-review.yaml  close-external-issues.yaml  publish.yaml
src/sqlfluff_tstring/: __main__.py  cli.py  extractor.py  finder.py  formatter.py  pipeline.py  rewriter.py
tests/: conftest.py  test_cli.py  test_extractor.py  test_finder.py  test_formatter.py  test_integration.py  test_pipeline.py  test_rewriter.py
tests/__snapshots__/test_extractor/: test_extract_multiple_interpolations.txt  test_extract_single_interpolation.txt  test_restore_limit_offset.1.txt  test_restore_limit_offset.txt  test_restore_preserves_formatting.txt  test_restore_simple.txt  test_restore_with_conversion.txt  test_restore_with_conversion_and_format_spec.txt  test_restore_with_format_spec.txt
tests/__snapshots__/test_formatter/: test_multiline_output.txt  test_with_placeholder.txt
tests/__snapshots__/test_integration/: test_format_fixture[mixed_code].txt  test_format_fixture[multiline_join].txt  test_format_fixture[multiple_calls].txt  test_format_fixture[simple_select].txt  test_format_fixture[with_interpolations].txt
tests/__snapshots__/test_rewriter/: test_multiple_replacements.txt  test_preserves_surrounding_code.txt  test_single_quoted.txt  test_single_replacement.txt  test_triple_quoted_idempotent_wrapping.txt  test_triple_quoted_single_line_no_wrapping.txt
tests/fixtures/: mixed_code.py  multiline_join.py  multiple_calls.py  simple_select.py  with_interpolations.py
