[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "sqlfluff-tstring"
version = "0.1.0"
description = "Auto-format SQL inside Python t-strings using sqlfluff"
requires-python = ">=3.14"
classifiers = [ "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.14" ]
dependencies = [ "sqlfluff>=4.0.4" ]

scripts.sqlfluff-tstring = "sqlfluff_tstring.cli:main"

[dependency-groups]
dev = [
  "pre-commit>=4.5.1",
  "pytest>=9.0.2",
  "ruff>=0.15.5",
  "syrupy>=5.1",
  "ty>=0.0.21",
]

[tool.hatch.build.targets.wheel]
packages = [ "src/sqlfluff_tstring" ]

[tool.uv]
required-version = ">=0.10.7"

[tool.ruff]
extend-exclude = [ "tests/fixtures" ]

[tool.ty.src]
exclude = [ "tests/fixtures" ]
